Furthers the inital build out of the static pages

--- a/PghTechFest.Www/Views/Shared/_Layout.cshtml
+++ b/PghTechFest.Www/Views/Shared/_Layout.cshtml
@@ -16,21 +16,21 @@
 <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <!-- MAIN CSS LIBRARIES -->
-<link href="content/css/reset.css" rel="stylesheet" type="text/css" />
-<link href="content/css/bootstrap.css" rel="stylesheet" type="text/css" />
-<link href="content/css/prettyPhoto.css" rel="stylesheet" type="text/css" />
-<link href="content/css/font-awesome.css" rel="stylesheet" type="text/css" />
-<link href="content/css/owl.carousel.css" rel="stylesheet" type="text/css" />
-<link href="content/css/owl.theme.css" rel="stylesheet" type="text/css" />
-<link href="content/css/YTPlayer.css" rel="stylesheet" type="text/css" />
-<link href="content/css/animate.css" rel="stylesheet" type="text/css" />
+<link href="~/content/css/reset.css" rel="stylesheet" type="text/css" />
+<link href="~/content/css/bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="~/content/css/prettyPhoto.css" rel="stylesheet" type="text/css" />
+<link href="~/content/css/font-awesome.css" rel="stylesheet" type="text/css" />
+<link href="~/content/css/owl.carousel.css" rel="stylesheet" type="text/css" />
+<link href="~/content/css/owl.theme.css" rel="stylesheet" type="text/css" />
+<link href="~/content/css/YTPlayer.css" rel="stylesheet" type="text/css" />
+<link href="~/content/css/animate.css" rel="stylesheet" type="text/css" />
 
 <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
-<link rel="stylesheet" type="text/css" href="content/rs-plugin/css/settings.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="content/rs-plugin/css/extralayers.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="~/content/rs-plugin/css/settings.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="~/content/rs-plugin/css/extralayers.css" media="screen" />
 
 <!-- MAIN STYLES FOR THE TEMPLATE -->
-<link href="content/css/style.css" rel="stylesheet" type="text/css" />
+<link href="~/content/css/style.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -50,10 +50,10 @@
 
 				<!-- *** LOGOS STARTS *** -->
 				<div id="logo">
-					<a href="#top"><img src="content/images/logo.png" alt="logo"></a>
+					<a href="#top"><img src="~/content/images/logo.png" alt="logo"></a>
 				</div>
 				<div id="logo_dark">
-					<a href="#top"><img src="content/images/logo_dark.png" alt="logo"></a>
+					<a href="#top"><img src="~/content/images/logo_dark.png" alt="logo"></a>
 				</div> 
 				<!-- *** LOGOS END *** -->
 
@@ -111,7 +111,7 @@
 
 
 <!-- *** FOOTER START *** -->
-<div id="footer" class="animated" data-animation-target="21">
+<div id="footer">
 	<div class="col_footer">
 		<h2>Logistics</h2>
 
@@ -163,24 +163,24 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-<script type="text/javascript" src="content/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="content/js/jquery.prettyPhoto.js"></script>	
-<script type="text/javascript" src="content/js/modernizr.custom.js"></script>
-<script type="text/javascript" src="content/js/jquery.scrollTo.js"></script>
-<script type="text/javascript" src="content/js/retina.js"></script>
-<script type="text/javascript" src="content/js/jquery.nav.js"></script>
-<script type="text/javascript" src="content/js/isotope.min.js"></script>
-<script type="text/javascript" src="content/js/owl.carousel.js"></script>
-<script type="text/javascript" src="content/js/jquery.mb.YTPlayer.js"></script>
-<script type="text/javascript" src="content/js/waypoints.min.js"></script>
+<script type="text/javascript" src="~/content/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="~/content/js/jquery.prettyPhoto.js"></script>	
+<script type="text/javascript" src="~/content/js/modernizr.custom.js"></script>
+<script type="text/javascript" src="~/content/js/jquery.scrollTo.js"></script>
+<script type="text/javascript" src="~/content/js/retina.js"></script>
+<script type="text/javascript" src="~/content/js/jquery.nav.js"></script>
+<script type="text/javascript" src="~/content/js/isotope.min.js"></script>
+<script type="text/javascript" src="~/content/js/owl.carousel.js"></script>
+<script type="text/javascript" src="~/content/js/jquery.mb.YTPlayer.js"></script>
+<script type="text/javascript" src="~/content/js/waypoints.min.js"></script>
 
 <!-- SLIDER REVOLUTION 4.x SCRIPTS  -->
 
-<script type="text/javascript" src="content/rs-plugin/js/jquery.themepunch.tools.min.js"></script>   
-<script type="text/javascript" src="content/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+<script type="text/javascript" src="~/content/rs-plugin/js/jquery.themepunch.tools.min.js"></script>   
+<script type="text/javascript" src="~/content/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
 
 
-<script type="text/javascript" src="content/js/custom.js"></script>
+<script type="text/javascript" src="~/content/js/custom.js"></script>
 
 <script type="text/javascript">
 
