--- a/PghTechFest.Www/Views/Venue/Index.cshtml
+++ b/PghTechFest.Www/Views/Venue/Index.cshtml
@@ -1,114 +1,4 @@
-<!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="ie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
-<html lang="en">
-<!--<![endif]-->
-<head>
-<title>Pittsburgh TechFest : Venue</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-<!-- DEFAULT TEMPLATE FONTS DO NOT REMOVE -->
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,300,600,700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-
-<!-- MAIN CSS LIBRARIES -->
-<link href="../css/reset.css" rel="stylesheet" type="text/css" />
-<link href="../css/bootstrap.css" rel="stylesheet" type="text/css" />
-<link href="../css/prettyPhoto.css" rel="stylesheet" type="text/css" />
-<link href="../css/font-awesome.css" rel="stylesheet" type="text/css" />
-<link href="../css/owl.carousel.css" rel="stylesheet" type="text/css" />
-<link href="../css/owl.theme.css" rel="stylesheet" type="text/css" />
-<link href="../css/YTPlayer.css" rel="stylesheet" type="text/css" />
-<link href="../css/animate.css" rel="stylesheet" type="text/css" />
-
-<!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
-<link rel="stylesheet" type="text/css" href="../rs-plugin/css/settings.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="../rs-plugin/css/extralayers.css" media="screen" />
-
-<!-- MAIN STYLES FOR THE TEMPLATE -->
-<link href="../style.css" rel="stylesheet" type="text/css" />
-<style>
-#welcome * {text-align:left !important; padding:0 30px;}
-#welcome * a {padding:0 !important; color:#e74c3c;}
-</style>
-</head>
-
-<body>
-<div id="top"></div>
-
-
-<!-- *** HEADER STARTS *** -->
-<header class="transparent_menu small">
-
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-12">
-
-				<!-- *** LOGOS STARTS *** -->
-				<div id="logo">
-					<a href="#top"><img src="../images/logo.png" alt="logo"></a>
-				</div>
-				<div id="logo_dark">
-					<a href="#top"><img src="../images/logo_dark.png" alt="logo"></a>
-				</div> 
-				<!-- *** LOGOS END *** -->
-
-				<ul class="mobile_nav_trigger">
-						<li><a href="#responsive_nav" class="menu_trigger"><i class="fa fa-bars fa-2x"></i></a></li>
-				</ul>
-
-					<div class="social_nav">
-					<ul>
-						<li class="twitter_header_icon"><a href="#twitter"><i class="fa fa-twitter fa-2x"></i></a></li>
-						<li class="facebook_header_icon"><a href="#facebook"><i class="fa fa-facebook fa-2x"></i></a></li>
-					</ul>
-				</div>
-				
-				<!-- *** MAIN NAVIGATION STARTS *** -->
-				<nav class="main_nav white">
-					<ul>
-						<li><a href="../sessions">Sessions</a></li>
-						<li><a href="../sponsors">Sponsors</a></li>
-						<li><a href="../speakers">Speakers</a></li>
-						<li><a href="../venue">Venue</a></li>
-						<li><a href="http://blog.pghtechfest.com/">Blog</a></li>
-						<li><a href="../contact">Contact</a></li>
-						<li><a href="http://www.eventbrite.com/e/pittsburgh-techfest-2014-tickets-11450315201" class="external">Register <span class="label label-danger">Open</span></a></li>
-					</ul>
-				</nav>
-				<!-- *** MAIN NAVIGATION END *** -->
-
-			</div><!--col-me-12-->
-		</div><!--row-->
-	</div><!--container-fluid-->
-
-
-<!-- *** RESPONSIVE NAV START *** -->
-	<div class="responsive_nav">
-		<div class="mobileAreaMenu">
-			<ul>
-				<li><a href="../sessions">Sessions</a></li>
-				<li><a href="../sponsors">Sponsors</a></li>
-				<li><a href="../speakers">Speakers</a></li>
-				<li><a href="../venue">Venue</a></li>
-				<li><a href="http://blog.pghtechfest.com/">Blog</a></li>
-				<li><a href="../contact">Contact</a></li>
-				<li><a href="http://www.eventbrite.com/e/pittsburgh-techfest-2014-tickets-11450315201" class="external">Register <span class="label label-danger">Open</span></a></li>
-			</ul>
-		</div><!--mobileAreaMenu-->
-	</div><!--responsive_nav-->
-<!-- *** RESPONSIVE NAV END *** -->
-
-</header>
-<!-- *** HEADER END *** -->
-
-
-
-<!-- *** WELCOME STARTS *** -->
+﻿<!-- *** WELCOME STARTS *** -->
 <div id="welcome">
 	<div class="container">
 		<div class="row">
@@ -137,91 +27,3 @@
 	</div>
 </div>
 <!-- *** WELCOME END *** -->
-
-
-
-<!-- *** FOOTER START *** -->
-<div id="footer">
-	<div class="col_footer">
-		<h2>Logistics</h2>
-
-		<ul class="footer_adress">
-			<li><i class="fa fa-map-marker fa-2x"></i>LaRoche College<br/>
-			June 13, 2015 - 8:00am<br/>
-			<a href="venue.html">Venue Info</a></li>
-		</ul>
-	
-	</div>
-
-	<div class="col_footer middle">
-			<h2>Social</h2>
-
-			<ul class="footer_icon">
-				<li><a href="#"><i class="fa fa-pinterest fa-2x"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-				<li><a href="#"><i class="fa fa-linkedin fa-2x"></i></a></li>
-			</ul>
-			
-	</div>
-
-	<div class="col_footer">
-		<h2>Contact Us</h2>
-
-		<p>
-			If you have any questions regarding Pittsburgh TechFest, please 
-			contact us at <a href="mailto:pittsburghtechfest@gmail.com">pittsburghtechfest@gmail.com</a>
-		</p>	
-	</div>
-	<div class="clear"></div>
-</div>
-<!-- *** FOOTER END *** -->
-
-
-
-<!-- *** SUBFOOTER START *** -->
-<div id="subfooter">
-<div class="copyright">Copyright 2015. All Right Reserved.</div><div class="clear"></div>
-</div>
-<!-- *** SUBFOOTER END *** -->
-
-
-<!-- SCRTIPS START-->
-
-
-<div class="loading_icon"></div>
-
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-<script type="text/javascript" src="../js/bootstrap.min.js"></script>
-<script type="text/javascript" src="../js/jquery.prettyPhoto.js"></script>	
-<script type="text/javascript" src="../js/modernizr.custom.js"></script>
-<script type="text/javascript" src="../js/jquery.scrollTo.js"></script>
-<script type="text/javascript" src="../js/retina.js"></script>
-<script type="text/javascript" src="../js/jquery.nav.js"></script>
-<script type="text/javascript" src="../js/isotope.min.js"></script>
-<script type="text/javascript" src="../js/owl.carousel.js"></script>
-<script type="text/javascript" src="../js/tweetie.js"></script>
-<script type="text/javascript" src="../js/jquery.mb.YTPlayer.js"></script>
-<script type="text/javascript" src="../js/waypoints.min.js"></script>
-
-<!-- SLIDER REVOLUTION 4.x SCRIPTS  -->
-
-<script type="text/javascript" src="../rs-plugin/js/jquery.themepunch.tools.min.js"></script>   
-<script type="text/javascript" src="../rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
-
-
-<script type="text/javascript" src="../js/custom.js"></script>
-
-<script type="text/javascript">
-
-	jQuery(document).ready(function() {
-		jQuery(window).scroll(function () {
-		
-	    jQuery('header').addClass('small');
-		});
-	});	//ready
-
-	</script>
-</body>
-</html>
