Consolidates into one project. Adds new front picture. Begins call for speakers form

--- a/PghTechFest.Www/Views/Home/Index.cshtml
+++ b/PghTechFest.Www/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
             <!-- SLIDE  -->
             <li data-transition="fade" data-slotamount="7" data-masterspeed="500" data-thumb="http://placehold.it/320x240" data-saveperformance="on" data-title="Intro Slide">
                 <!-- MAIN IMAGE -->
-                <img src="content/images/dicello-pittsburgh.jpeg" alt="slidebg1" data-lazyload="content/images/dicello-pittsburgh.jpeg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+                <img src="content/images/dicello-pittsburgh.jpg" alt="slidebg1" data-lazyload="content/images/dicello-pittsburgh.jpg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
                 <!-- LAYERS -->
 
                 <div class="caption lft ltb cap_style_13"
