--- a/PghTechFest.Www/Views/Home/Index.cshtml
+++ b/PghTechFest.Www/Views/Home/Index.cshtml
@@ -8,30 +8,19 @@
                 <img src="content/images/dicello-pittsburgh.jpg" alt="slidebg1" data-lazyload="content/images/dicello-pittsburgh.jpg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
                 <!-- LAYERS -->
 
-                <div class="caption lft ltb cap_style_13"
-                    data-x="60"
-                    data-y="635"
-                    data-speed="600"
-                    data-start="800"
-                    data-easing="easeOutExpo" style="background: gold">
+                <div class="caption lft ltb cap_style_13" style="bottom: 235px; left: 60px; background: gold;"
+                    data-easing="easeOutExpo">
                     Pittsburgh TechFest
                 </div>
 
-                <div class="caption lft ltb cap_style_13_subtitle"
-                    data-x="60"
-                    data-y="720"
-                    data-speed="600"
-                    data-start="1300"
-                    data-easing="easeOutExpo" style="background: gold">
+                <div class="caption lft ltb cap_style_13_subtitle" style="bottom: 180px; left: 60px; background: gold;"
+                    data-easing="easeOutExpo">
                     Committed to the enrichment of the Pittsburgh technical community.
                 </div>
 
                 <!-- CAPTION NR. 3 -->
-                <div class="caption lfb cap_style_13_button"
-                    data-x="60"
-                    data-y="785"
-                    data-speed="500"
-                    data-start="1500" data-easing="easeOutBack" style="background: gold">
+                <div class="caption lfb cap_style_13_button" style="bottom: 125px; left: 60px; background: gold;"
+                    data-easing="easeOutBack">
                     <a href="https://groups.google.com/forum/#!forum/pghtechfest" target="_blank">Get the latest information by joining the mailing list >>
                     </a>
                 </div>
