--- a/PghTechFest.Www/Views/Shared/_Layout.cshtml
+++ b/PghTechFest.Www/Views/Shared/_Layout.cshtml
@@ -7,261 +7,275 @@
 <html lang="en">
 <!--<![endif]-->
 <head>
-<title>Pittsburgh TechFest</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <title>Pittsburgh TechFest</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<!-- DEFAULT TEMPLATE FONTS DO NOT REMOVE -->
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,300,600,700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+    <!-- DEFAULT TEMPLATE FONTS DO NOT REMOVE -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,300,600,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 
-<!-- MAIN CSS LIBRARIES -->
-<link href="~/content/css/reset.css" rel="stylesheet" type="text/css" />
-<link href="~/content/css/bootstrap.css" rel="stylesheet" type="text/css" />
-<link href="~/content/css/prettyPhoto.css" rel="stylesheet" type="text/css" />
-<link href="~/content/css/font-awesome.css" rel="stylesheet" type="text/css" />
-<link href="~/content/css/owl.carousel.css" rel="stylesheet" type="text/css" />
-<link href="~/content/css/owl.theme.css" rel="stylesheet" type="text/css" />
-<link href="~/content/css/YTPlayer.css" rel="stylesheet" type="text/css" />
-<link href="~/content/css/animate.css" rel="stylesheet" type="text/css" />
+    <!-- MAIN CSS LIBRARIES -->
+    <link href="~/content/css/reset.css" rel="stylesheet" type="text/css" />
+    <link href="~/content/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="~/content/css/prettyPhoto.css" rel="stylesheet" type="text/css" />
+    <link href="~/content/css/font-awesome.css" rel="stylesheet" type="text/css" />
+    <link href="~/content/css/owl.carousel.css" rel="stylesheet" type="text/css" />
+    <link href="~/content/css/owl.theme.css" rel="stylesheet" type="text/css" />
+    <link href="~/content/css/YTPlayer.css" rel="stylesheet" type="text/css" />
+    <link href="~/content/css/animate.css" rel="stylesheet" type="text/css" />
 
-<!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
-<link rel="stylesheet" type="text/css" href="~/content/rs-plugin/css/settings.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="~/content/rs-plugin/css/extralayers.css" media="screen" />
+    <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
+    <link rel="stylesheet" type="text/css" href="~/content/rs-plugin/css/settings.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="~/content/rs-plugin/css/extralayers.css" media="screen" />
 
-<!-- MAIN STYLES FOR THE TEMPLATE -->
-<link href="~/content/css/style.css" rel="stylesheet" type="text/css" />
+    <!-- MAIN STYLES FOR THE TEMPLATE -->
+    <link href="~/content/css/style.css" rel="stylesheet" type="text/css" />
 
 </head>
 
 <body>
-<div id="top"></div>
-<div id="preloader">
-    <div id="status">&nbsp;</div>
-</div>
+    <div id="top"></div>
+    <div id="preloader">
+        <div id="status">&nbsp;</div>
+    </div>
 
 
-<!-- *** HEADER STARTS *** -->
-<header class="transparent_menu">
+    <!-- *** HEADER STARTS *** -->
+    <header class="transparent_menu">
 
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-12">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
 
-				<!-- *** LOGOS STARTS *** -->
-				<div id="logo">
-					<a href="#top"><img src="~/content/images/logo.png" alt="logo"></a>
-				</div>
-				<div id="logo_dark">
-					<a href="#top"><img src="~/content/images/logo_dark.png" alt="logo"></a>
-				</div> 
-				<!-- *** LOGOS END *** -->
+                    <!-- *** LOGOS STARTS *** -->
+                    <div id="logo">
+                        <a href="~/" class="external"><img src="~/content/images/logo.png" alt="logo"></a>
+                    </div>
+                    <div id="logo_dark">
+                        <a href="~/" class="external"><img src="~/content/images/logo_dark.png" alt="logo"></a>
+                    </div>
+                    <!-- *** LOGOS END *** -->
 
-				<ul class="mobile_nav_trigger">
-						<li><a href="#responsive_nav" class="menu_trigger"><i class="fa fa-bars fa-2x"></i></a></li>
-				</ul>
+                    <ul class="mobile_nav_trigger">
+                        <li><a href="#responsive_nav" class="menu_trigger"><i class="fa fa-bars fa-2x"></i></a></li>
+                    </ul>
 
-					<div class="social_nav">
-					<ul>
-						<li class="twitter_header_icon"><a href="#twitter"><i class="fa fa-twitter fa-2x"></i></a></li>
-						<li class="facebook_header_icon"><a href="#facebook"><i class="fa fa-facebook fa-2x"></i></a></li>
-					</ul>
-				</div>
-				
-				<!-- *** MAIN NAVIGATION STARTS *** -->
-				<nav class="main_nav white">
-					<ul>
-						<li><a href="~/sessions">Sessions</a></li>
-						<li><a href="~/sponsors">Sponsors</a></li>
-						<li><a href="~/speakers">Speakers</a></li>
-						<li><a href="~/venue">Venue</a></li>
-						<li><a href="http://blog.pghtechfest.com/">Blog</a></li>
-						<li><a href="~/contact">Contact</a></li>
+                    <div class="social_nav">
+                        <ul>
+                            <li class="twitter_header_icon"><a href="#twitter"><i class="fa fa-twitter fa-2x"></i></a></li>
+                            @*<li class="facebook_header_icon"><a href="#facebook"><i class="fa fa-facebook fa-2x"></i></a></li>*@
+                        </ul>
+                    </div>
+
+                    <!-- *** MAIN NAVIGATION STARTS *** -->
+                    <nav class="main_nav white">
+                        <ul>
+                            <li><a href="~/sponsors" class="external">Sponsors</a></li>
+                            @* 
+                            <li><a href="~/sessions" class="external">Sessions</a></li>
+                            <li><a href="~/speakers" class="external">Speakers</a></li>
+                            *@
+                            <li><a href="~/venue" class="external">Venue</a></li>
+                            <li><a href="http://blog.pghtechfest.com/" class="external">Blog</a></li>
+                            <li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>
+                            @* 
+						    <li><a href="http://www.eventbrite.com/e/pittsburgh-techfest-2014-tickets-11450315201" class="external">Register <span class="label label-danger">Open</span></a></li>
+                            *@
+                        </ul>
+                    </nav>
+                    <!-- *** MAIN NAVIGATION END *** -->
+
+                </div>
+                <!--col-me-12-->
+            </div>
+            <!--row-->
+        </div>
+        <!--container-fluid-->
+
+
+        <!-- *** RESPONSIVE NAV START *** -->
+        <div class="responsive_nav">
+            <div class="mobileAreaMenu">
+                <ul>
+                    <li><a href="~/sponsors" class="external">Sponsors</a></li>
+                    @* 
+                    <li><a href="~/sessions" class="external">Sessions</a></li>
+                    <li><a href="~/speakers" class="external">Speakers</a></li>
+                    *@
+                    <li><a href="~/venue" class="external">Venue</a></li>
+                    <li><a href="http://blog.pghtechfest.com/" class="external">Blog</a></li>
+                    <li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>
+                    @* 
 						<li><a href="http://www.eventbrite.com/e/pittsburgh-techfest-2014-tickets-11450315201" class="external">Register <span class="label label-danger">Open</span></a></li>
-					</ul>
-				</nav>
-				<!-- *** MAIN NAVIGATION END *** -->
+                    *@
+                </ul>
+            </div>
+            <!--mobileAreaMenu-->
+        </div>
+        <!--responsive_nav-->
+        <!-- *** RESPONSIVE NAV END *** -->
 
-			</div><!--col-me-12-->
-		</div><!--row-->
-	</div><!--container-fluid-->
-
-
-<!-- *** RESPONSIVE NAV START *** -->
-	<div class="responsive_nav">
-		<div class="mobileAreaMenu">
-			<ul>
-				<li><a href="~/sessions">Sessions</a></li>
-				<li><a href="~/sponsors">Sponsors</a></li>
-				<li><a href="~/speakers">Speakers</a></li>
-				<li><a href="~/venue">Venue</a></li>
-				<li><a href="http://blog.pghtechfest.com/">Blog</a></li>
-				<li><a href="~/contact">Contact</a></li>
-				<li><a href="http://www.eventbrite.com/e/pittsburgh-techfest-2014-tickets-11450315201" class="external">Register <span class="label label-danger">Open</span></a></li>
-			</ul>
-		</div><!--mobileAreaMenu-->
-	</div><!--responsive_nav-->
-<!-- *** RESPONSIVE NAV END *** -->
-
-</header>
-<!-- *** HEADER END *** -->
+    </header>
+    <!-- *** HEADER END *** -->
 
 
-@RenderBody()
+    @RenderBody()
 
 
-<!-- *** FOOTER START *** -->
-<div id="footer">
-	<div class="col_footer">
-		<h2>Logistics</h2>
+    <!-- *** FOOTER START *** -->
+    <div id="footer">
+        <div class="col_footer">
+            <h2>Logistics</h2>
 
-		<ul class="footer_adress">
-			<li><i class="fa fa-map-marker fa-2x"></i>LaRoche College<br/>
-			June 13, 2015 - 8:00am<br/>
-			<a href="~/content">Venue Info</a></li>
-		</ul>
-	
-	</div>
+            <ul class="footer_adress">
+                <li><i class="fa fa-map-marker fa-2x"></i>LaRoche College<br />
+                    June 13, 2015 - 8:00am<br />
+                    <a href="~/content">Venue Info</a></li>
+            </ul>
 
-	<div class="col_footer middle">
-			<h2>Social</h2>
+        </div>
 
-			<ul class="footer_icon">
-				<li><a href="#"><i class="fa fa-pinterest fa-2x"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-				<li><a href="#"><i class="fa fa-linkedin fa-2x"></i></a></li>
-			</ul>
-			
-	</div>
+        <div class="col_footer middle">
+            <h2>Social</h2>
 
-	<div class="col_footer">
-		<h2>Contact Us</h2>
+            <ul class="footer_icon">
+                <li><a href="#"><i class="fa fa-pinterest fa-2x"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin fa-2x"></i></a></li>
+            </ul>
 
-		<p>
-			If you have any questions regarding Pittsburgh TechFest, please 
+        </div>
+
+        <div class="col_footer">
+            <h2>Contact Us</h2>
+
+            <p>
+                If you have any questions regarding Pittsburgh TechFest, please 
 			contact us at <a href="mailto:pittsburghtechfest@gmail.com">pittsburghtechfest@gmail.com</a>
-		</p>	
-	</div>
-	<div class="clear"></div>
-</div>
-<!-- *** FOOTER END *** -->
+            </p>
+        </div>
+        <div class="clear"></div>
+    </div>
+    <!-- *** FOOTER END *** -->
 
 
 
-<!-- *** SUBFOOTER START *** -->
-<div id="subfooter">
-<div class="copyright">Copyright 2015. All Right Reserved.</div><div class="clear"></div>
-</div>
-<!-- *** SUBFOOTER END *** -->
+    <!-- *** SUBFOOTER START *** -->
+    <div id="subfooter">
+        <div class="copyright">Copyright 2015. All Right Reserved.</div>
+        <div class="clear"></div>
+    </div>
+    <!-- *** SUBFOOTER END *** -->
 
 
-<!-- SCRTIPS START-->
+    <!-- SCRTIPS START-->
 
 
-<div class="loading_icon"></div>
+    <div class="loading_icon"></div>
 
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-<script type="text/javascript" src="~/content/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="~/content/js/jquery.prettyPhoto.js"></script>	
-<script type="text/javascript" src="~/content/js/modernizr.custom.js"></script>
-<script type="text/javascript" src="~/content/js/jquery.scrollTo.js"></script>
-<script type="text/javascript" src="~/content/js/retina.js"></script>
-<script type="text/javascript" src="~/content/js/jquery.nav.js"></script>
-<script type="text/javascript" src="~/content/js/isotope.min.js"></script>
-<script type="text/javascript" src="~/content/js/owl.carousel.js"></script>
-<script type="text/javascript" src="~/content/js/jquery.mb.YTPlayer.js"></script>
-<script type="text/javascript" src="~/content/js/waypoints.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="~/content/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="~/content/js/jquery.prettyPhoto.js"></script>
+    <script type="text/javascript" src="~/content/js/modernizr.custom.js"></script>
+    <script type="text/javascript" src="~/content/js/jquery.scrollTo.js"></script>
+    <script type="text/javascript" src="~/content/js/retina.js"></script>
+    <script type="text/javascript" src="~/content/js/jquery.nav.js"></script>
+    <script type="text/javascript" src="~/content/js/isotope.min.js"></script>
+    <script type="text/javascript" src="~/content/js/owl.carousel.js"></script>
+    <script type="text/javascript" src="~/content/js/jquery.mb.YTPlayer.js"></script>
+    <script type="text/javascript" src="~/content/js/waypoints.min.js"></script>
 
-<!-- SLIDER REVOLUTION 4.x SCRIPTS  -->
+    <!-- SLIDER REVOLUTION 4.x SCRIPTS  -->
 
-<script type="text/javascript" src="~/content/rs-plugin/js/jquery.themepunch.tools.min.js"></script>   
-<script type="text/javascript" src="~/content/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+    <script type="text/javascript" src="~/content/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+    <script type="text/javascript" src="~/content/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
 
 
-<script type="text/javascript" src="~/content/js/custom.js"></script>
+    <script type="text/javascript" src="~/content/js/custom.js"></script>
 
-<script type="text/javascript">
+    <script type="text/javascript">
 
-	jQuery(document).ready(function() {
-	
-	jQuery('.tp-banner').show().revolution(
-		{
-			dottedOverlay:"none",
-			delay:7000,
-			startwidth:1170,
-			startheight:900,
-			hideThumbs:200,
-			
-			thumbWidth:100,
-			thumbHeight:50,
-			thumbAmount:5,
-			
-			navigationType:"bullet",
-			navigationArrows:"solo",
-			navigationStyle:"preview4",
-			
-			touchenabled:"on",
-			onHoverStop:"on",
-			
-			swipe_velocity: 0.7,
-			swipe_min_touches: 1,
-			swipe_max_touches: 1,
-			drag_block_vertical: false,
-									
-			parallax:"mouse",
-			parallaxBgFreeze:"on",
-			parallaxLevels:[7,4,3,2,5,4,3,2,1,0],
-									
-			keyboardNavigation:"off",
-			
-			navigationHAlign:"center",
-			navigationVAlign:"bottom",
-			navigationHOffset:0,
-			navigationVOffset:20,
+        jQuery(document).ready(function () {
 
-			soloArrowLeftHalign:"left",
-			soloArrowLeftValign:"center",
-			soloArrowLeftHOffset:20,
-			soloArrowLeftVOffset:0,
+            jQuery('.tp-banner').show().revolution(
+                {
+                    dottedOverlay: "none",
+                    delay: 7000,
+                    startwidth: 1170,
+                    startheight: 900,
+                    hideThumbs: 200,
 
-			soloArrowRightHalign:"right",
-			soloArrowRightValign:"center",
-			soloArrowRightHOffset:20,
-			soloArrowRightVOffset:0,
-					
-			shadow:0,
-			fullWidth:"on",
-			fullScreen:"off",
+                    thumbWidth: 100,
+                    thumbHeight: 50,
+                    thumbAmount: 5,
 
-			spinner:"spinner4",
-			
-			stopLoop:"off",
-			stopAfterLoops:-1,
-			stopAtSlide:-1,
+                    navigationType: "bullet",
+                    navigationArrows: "solo",
+                    navigationStyle: "preview4",
 
-			shuffle:"off",
-			
-			autoHeight:"off",						
-			forceFullWidth:"on",						
-									
-									
-									
-			hideThumbsOnMobile:"off",
-			hideNavDelayOnMobile:1500,						
-			hideBulletsOnMobile:"off",
-			hideArrowsOnMobile:"off",
-			hideThumbsUnderResolution:0,
-			
-			hideSliderAtLimit:0,
-			hideCaptionAtLimit:0,
-			hideAllCaptionAtLilmit:0,
-			startWithSlide:0,
-				
-		});
-				
-	});	//ready
-				
-</script>
+                    touchenabled: "on",
+                    onHoverStop: "on",
+
+                    swipe_velocity: 0.7,
+                    swipe_min_touches: 1,
+                    swipe_max_touches: 1,
+                    drag_block_vertical: false,
+
+                    parallax: "mouse",
+                    parallaxBgFreeze: "on",
+                    parallaxLevels: [7, 4, 3, 2, 5, 4, 3, 2, 1, 0],
+
+                    keyboardNavigation: "off",
+
+                    navigationHAlign: "center",
+                    navigationVAlign: "bottom",
+                    navigationHOffset: 0,
+                    navigationVOffset: 20,
+
+                    soloArrowLeftHalign: "left",
+                    soloArrowLeftValign: "center",
+                    soloArrowLeftHOffset: 20,
+                    soloArrowLeftVOffset: 0,
+
+                    soloArrowRightHalign: "right",
+                    soloArrowRightValign: "center",
+                    soloArrowRightHOffset: 20,
+                    soloArrowRightVOffset: 0,
+
+                    shadow: 0,
+                    fullWidth: "on",
+                    fullScreen: "off",
+
+                    spinner: "spinner4",
+
+                    stopLoop: "off",
+                    stopAfterLoops: -1,
+                    stopAtSlide: -1,
+
+                    shuffle: "off",
+
+                    autoHeight: "off",
+                    forceFullWidth: "on",
+
+
+
+                    hideThumbsOnMobile: "off",
+                    hideNavDelayOnMobile: 1500,
+                    hideBulletsOnMobile: "off",
+                    hideArrowsOnMobile: "off",
+                    hideThumbsUnderResolution: 0,
+
+                    hideSliderAtLimit: 0,
+                    hideCaptionAtLimit: 0,
+                    hideAllCaptionAtLilmit: 0,
+                    startWithSlide: 0,
+
+                });
+
+        });	//ready
+
+    </script>
 </body>
