--- a/PghTechFest.Www/Views/Sponsors/Index.cshtml
+++ b/PghTechFest.Www/Views/Sponsors/Index.cshtml
@@ -44,3 +44,10 @@
 	</div>
 </div>
 <!-- *** WELCOME END *** -->
+
+@section page_scripts
+{
+    $('#top_menu').addClass('dark_menu');
+    $('#top_menu').removeClass('transparent_menu');
+    $('#logo_dark').html('<img src="~/content/images/logo.png" alt="logo">');
+}
