--- a/PghTechFest.Www/Views/Shared/_Layout.cshtml
+++ b/PghTechFest.Www/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
 
     <!-- *** HEADER STARTS *** -->
-    <header class="transparent_menu">
+    <header class="transparent_menu" id="top_menu">
 
         <div class="container-fluid">
             <div class="row">
@@ -63,7 +63,7 @@
 
                     <div class="social_nav">
                         <ul>
-                            <li class="twitter_header_icon"><a href="#twitter"><i class="fa fa-twitter fa-2x"></i></a></li>
+                            <li class="twitter_header_icon"><a href="https://twitter.com/thepghtechfest" class="external" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
                             @*<li class="facebook_header_icon"><a href="#facebook"><i class="fa fa-facebook fa-2x"></i></a></li>*@
                         </ul>
                     </div>
@@ -140,9 +140,7 @@
             <h2>Social</h2>
 
             <ul class="footer_icon">
-                <li><a href="#"><i class="fa fa-pinterest fa-2x"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                <li><a href="https://twitter.com/thepghtechfest" class="external" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
             </ul>
 
         </div>
@@ -163,7 +161,7 @@
 
     <!-- *** SUBFOOTER START *** -->
     <div id="subfooter">
-        <div class="copyright">Copyright 2015. All Right Reserved.</div>
+        <div class="copyright">Copyright Pittsburgh TechFest @DateTime.Now.Year. All Right Reserved.</div>
         <div class="clear"></div>
     </div>
     <!-- *** SUBFOOTER END *** -->
@@ -274,7 +272,7 @@
                     startWithSlide: 0,
 
                 });
-
+            @RenderSection("page_scripts", required: false)
         });	//ready
 
     </script>
