Adds photo credit to front page

--- a/PghTechFest.Www/Views/Home/Index.cshtml
+++ b/PghTechFest.Www/Views/Home/Index.cshtml
@@ -20,9 +20,13 @@
 
                 <!-- CAPTION NR. 3 -->
                 <div class="caption lfb cap_style_13_button" style="bottom: 125px; left: 60px; background: gold;"
-                    data-easing="easeOutBack">
+                     data-easing="easeOutBack">
                     <a href="https://groups.google.com/forum/#!forum/pghtechfest" target="_blank">Get the latest information by joining the mailing list >>
                     </a>
+                </div>
+                <div class="caption lfb cap_style_13_button" style="bottom: 75px; left: 60px; background: none; font-size: 14px;"
+                    data-easing="easeOutBack">
+                    Photo by <a href="http://davedicello.com/" target="blank" class="external">Dave Dicello</a>
                 </div>
             </li>
         </ul>
