--- a/PghTechFest.Www/Views/Home/Index.cshtml
+++ b/PghTechFest.Www/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                     <a href="https://groups.google.com/forum/#!forum/pghtechfest" target="_blank">Get the latest information by joining the mailing list >>
                     </a>
                 </div>
-                <div class="caption lfb cap_style_13_button" style="bottom: 75px; left: 60px; background: none; font-size: 14px;"
+                <div class="caption lfb cap_style_13_button" style="bottom: 75px; left: 60px; background: none; font-size: 12px;font-weight: normal"
                     data-easing="easeOutBack">
                     Photo by <a href="http://davedicello.com/" target="blank" class="external">Dave Dicello</a>
                 </div>
