Azure, you're killing me

--- a/PghTechFest.Www/Views/Shared/_Layout.cshtml
+++ b/PghTechFest.Www/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                             <li><a href="~/sessions" class="external">Sessions</a></li>
                             <li><a href="~/speakers" class="external">Speakers</a></li>
                             *@
-                            <li><a href="~/place" class="external">Venue</a></li>
+                            <li><a href="~/venue" class="external">Venue</a></li>
                             <li><a href="http://blog.pghtechfest.com/" class="external">Blog</a></li>
                             @* 
                             <li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>
@@ -103,7 +103,7 @@
                     <li><a href="~/sessions" class="external">Sessions</a></li>
                     <li><a href="~/speakers" class="external">Speakers</a></li>
                     *@
-                    <li><a href="~/place" class="external">Venue</a></li>
+                    <li><a href="~/venue" class="external">Venue</a></li>
                     <li><a href="http://blog.pghtechfest.com/" class="external">Blog</a></li>
                     @* 
                         <li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>
