--- a/PghTechFest.Www/Views/CallForSpeakers/Create.cshtml
+++ b/PghTechFest.Www/Views/CallForSpeakers/Create.cshtml
@@ -85,15 +85,15 @@
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Track)
+                                @Html.LabelFor(model => model.Tracks)
                                     @foreach (var track in ViewBag.Tracks)
                                     {
                                         <label class="checkbox" style="margin-left: 20px;">
-                                            <input type="checkbox" name="Track" value="@track.Id"/>
+                                            <input type="checkbox" name="Tracks" value="@track.Id"/>
                                              @track.Name
                                         </label>
                                     }
-                                @Html.ValidationMessageFor(model => model.Track)
+                                @Html.ValidationMessageFor(model => model.Tracks)
                             </div>
 
                             <div class="form-group">
