Cleans up 2015 event sponsorship page

--- a/PghTechFest.Www/Views/Sponsors/Index.cshtml
+++ b/PghTechFest.Www/Views/Sponsors/Index.cshtml
@@ -12,32 +12,28 @@
 					<h1 class="title">Sponsors</h1>
 				</div>
 				<div class="welcome-text">
-
+				    We have 2016 open opportunities for Platinum, Gold, Breakfast and Event sponsorships. Please contact us today for more information.
+				    <br/>
+                    <a href="mailto:pittsburghtechfest@gmail.com">pittsburghtechfest@gmail.com</a>
+                    <!--
 				    <h2>Platinum Sponsors</h2>
                     <br/>
-				    <a href="http://www.brandingbrand.com/"><img src="~/Content/images/sponsors/brandingbrand.png"/></a>
-				    <a href="http://www.componentone.com/"><img src="~/Content/images/sponsors/component-one.png"/></a>
-				    <a href="http://www.summa-tech.com/"><img src="~/Content/images/sponsors/summa.png"/></a>
-				    <a href="http://www.upmc.com/"><img src="~/Content/images/sponsors/upmc.png"/></a>
+				    
 				    <br/>
                     <br/>
 				    <h2>Gold Sponsors</h2>
                     <br/>
-				    <a href="http://www.ciber.com/"><img src="~/Content/images/sponsors/ciber.png"/></a>
-				    <a href="http://www.confluence.com/"><img src="~/Content/images/sponsors/confluence.png"/></a>
-				    <a href="http://www.iq-inc.com/"><img src="~/Content/images/sponsors/iq.png"/></a>
-				    <a href="http://www.omnyx.com/"><img src="~/Content/images/sponsors/omnyx.png"/></a>
+				    
 				    <br/>
                     <br/>
 				    <h2>Breakfast Sponsor</h2>
                     <br/>
-				    <a href="http://www.ceiamerica.com/home.aspx"><img src="~/Content/images/sponsors/cei.png"/></a>
-				    <a href="http://gentechpgh.com/"><img src="~/Content/images/sponsors/gentech.png"/></a>
+				    
 				    <br/>
                     <br/>
 				    <h2>Event Sponsor</h2>
                     <br/>
-                    <a href="http://pghtech.org/"><img src="~/Content/images/sponsors/ptc.png" /></a>
+                    -->
 				</div>
 			</div>
 		</div>
