--- a/PghTechFest.Www/Views/Shared/_Layout.cshtml
+++ b/PghTechFest.Www/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                     <div class="social_nav">
                         <ul>
                             <li class="twitter_header_icon"><a href="https://twitter.com/thepghtechfest" class="external" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
-                            @*<li class="facebook_header_icon"><a href="#facebook"><i class="fa fa-facebook fa-2x"></i></a></li>*@
+                            <li class="facebook_header_icon"><a href="https://www.facebook.com/PghTechFest" class="external" target="_blank">><i class="fa fa-facebook fa-2x"></i></a></li>
                         </ul>
                     </div>
 
@@ -141,6 +141,7 @@
 
             <ul class="footer_icon">
                 <li><a href="https://twitter.com/thepghtechfest" class="external" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
+                <li><a href="https://www.facebook.com/PghTechFest" class="external" target="_blank"><i class="fa fa-facebook fa-2x"></i></a></li>
             </ul>
 
         </div>
