Adds register link

--- a/PghTechFest.Www/Views/Shared/_Layout.cshtml
+++ b/PghTechFest.Www/Views/Shared/_Layout.cshtml
@@ -78,10 +78,8 @@
                             *@
                             <li><a href="~/venue" class="external">Venue</a></li>
                             <li><a href="http://blog.pghtechfest.com/" class="external">Blog</a></li>
-                            <!--<li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>-->
-                            @* 
-						    <li><a href="http://www.eventbrite.com/e/pittsburgh-techfest-2014-tickets-11450315201" class="external">Register <span class="label label-danger">Open</span></a></li>
-                            *@
+                            @*<li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>*@
+                            <li><a href="https://www.eventbrite.com/e/pittsburgh-techfest-2015-tickets-16529674702" class="external">Register <span class="label label-danger">Open</span></a></li>
                         </ul>
                     </nav>
                     <!-- *** MAIN NAVIGATION END *** -->
@@ -105,10 +103,8 @@
                     *@
                     <li><a href="~/venue" class="external">Venue</a></li>
                     <li><a href="http://blog.pghtechfest.com/" class="external">Blog</a></li>
-                    <li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>
-                    @* 
-                    	<li><a href="http://www.eventbrite.com/e/pittsburgh-techfest-2014-tickets-11450315201" class="external">Register <span class="label label-danger">Open</span></a></li>
-                    *@
+                    @*<li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>*@
+                            <li><a href="https://www.eventbrite.com/e/pittsburgh-techfest-2015-tickets-16529674702" class="external">Register <span class="label label-danger">Open</span></a></li>
                 </ul>
             </div>
             <!--mobileAreaMenu-->
