--- a/PghTechFest.Www/Views/Shared/_Layout.cshtml
+++ b/PghTechFest.Www/Views/Shared/_Layout.cshtml
@@ -72,8 +72,9 @@
                     <nav class="main_nav white">
                         <ul>
                             <li><a href="~/sponsors" class="external">Sponsors</a></li>
+                            
+                            <li><a href="~/talks" class="external">Sessions</a></li>
                             @* 
-                            <li><a href="~/sessions" class="external">Sessions</a></li>
                             <li><a href="~/speakers" class="external">Speakers</a></li>
                             *@
                             <li><a href="~/venue" class="external">Venue</a></li>
@@ -96,8 +97,8 @@
             <div class="mobileAreaMenu">
                 <ul>
                     <li><a href="~/sponsors" class="external">Sponsors</a></li>
+                    <li><a href="~/talks" class="external">Sessions</a></li>
                     @* 
-                    <li><a href="~/sessions" class="external">Sessions</a></li>
                     <li><a href="~/speakers" class="external">Speakers</a></li>
                     *@
                     <li><a href="~/venue" class="external">Venue</a></li>
